# kube-term

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  redis.yaml  supervisord.conf  web-term.yaml
common/: Cargo.toml
common/kube/: Cargo.toml
common/kube/src/: lib.rs
common/kube/tests/: mod.rs
common/logger/: Cargo.toml
common/logger/src/: logger_trace.rs
common/src/: constants.rs  lib.rs
common/util/src/: err.rs  rsp.rs
common/version/: Cargo.toml
common/version/src/: err.rs  lib.rs
common/version/tests/: demo.rs
crates/: Cargo.toml
crates/boot/: Cargo.toml
crates/boot/src/: main.rs
crates/logs-template/: Cargo.toml
crates/logs-template/src/: lib.rs  logger_env.rs  logger_trace.rs
crates/pod_exec/: Cargo.toml
crates/pod_exec/src/: connector.rs  lib.rs  model.rs  msg_handle.rs  services.rs
crates/pod_exec/tests/: mod.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  main.rs
crates/tokio-tungstenite/: Cargo.toml
crates/tokio-tungstenite/examples/:  server-custom-accept.rs
crates/ws/: Cargo.toml
crates/ws-server/: Cargo.toml
crates/ws-server/src/: main.rs
crates/ws/src/: lib.rs  main.rs  msg_handle.rs  pod_exec.rs
crates/ws/tests/: lib.rs  mod.rs
deploy/: deployment.yaml  ubuntu22.04.yaml
lib/: Cargo.toml
script/: cmd.sh
