[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
tracing = "0.1.40"
tracing-subscriber = { version="0.3.18", features = ["env-filter"] }
env_logger = "0.11.3"

tokio = { version = "1.33.0", features = ["full"] }
chrono = {version = "0.4.19",features=["serde"]}
hostname = "0.4.0"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
dotenv = "0.15.0"

