[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
common.workspace = true
logger.workspace = true
kube = { version = "0.92.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-native-roots",
] }
futures-util = { version = "0.3.29", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.2"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
